fixed font alignment

--- a/public/stylesheets/sass/_publication_common.sass
+++ b/public/stylesheets/sass/_publication_common.sass
@@ -51,18 +51,18 @@ a.owner
 
 .text_element
   padding: 0px
-  margin: 0px
+  margin: 6px 0px 0px 6px
   white-space: pre-line
   font-family: 'Lato', serif
   font-size: 14px
   font-style: normal
-  font-weight: 400
+  font-weight: normal
   text-shadow: none
   text-decoration: none
   text-transform: none
   letter-spacing: 0em
   word-spacing: 0em
-  line-height: 1.2
+  line-height: normal
 /* Set this once the editor is more WYSIWYG
 /*  overflow: hidden
 
